--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="profile">
             <img class="ProfileImage" src="https://scontent.fjdh1-1.fna.fbcdn.net/v/t31.0-8/23916620_2008076689407781_4860137714470470119_o.jpg?_nc_cat=111&_nc_sid=e3f864&_nc_ohc=lh5QXObnPxIAX8sbmGg&_nc_ht=scontent.fjdh1-1.fna&oh=e590e69be255faca4e8e651e9b6e89c0&oe=5F87515A" alt="Image of prateek singh">
           <h2>Bonjour!</h2>
-          <p class="intro-text">I am a Electrical Engineer and a Programmer. I love 🍺.</p>
+          <p class="intro-text">I am a Electrical Engineer and a Programmer.</p>
         </div>
         <hr>
         <div class="skills">
@@ -40,7 +40,7 @@
         <div class="contact-me">
           <h2 class="contact-me-heading">Get In Touch</h2>
           <h3 class="contact-me-subheading">Don't know where to start?</h3>
-          <p class="contact-para" >Have same intrests as me but don't know what to do next or where to start, lets grab a beer together.</p>
+          <p class="contact-para" >Have same intrests as me but don't know what to do next or where to start, lets hangout together.</p>
           <a href="mailto:prateekmilliondollardream@gmail.com" class="btn">CONTACT ME</a>
         </div>
       </div>
